<resources>
    <string name="app_name">Max Bagryantsev</string>
    <string name="et_phone_number">phone number</string>
    <string name="et_email">E-mail</string>
    <string name="et_vk">VK</string>
    <string name="et_repo">Github</string>
    <string name="et_about">About me</string>
    <string name="menu_my_profile">My profile</string>
    <string name="menu_team">Team</string>
    <string name="drawer_user_name">Max Bagryantsev</string>
    <string name="drawer_user_mail">ipvoodoo@gmail.com</string>
    <string name="user_profile_placeholder_image">Change profile photo</string>
    <string name="user_profile_dialog_gallery">Load from the gallery</string>
    <string name="user_profile_dialog_camera">Take a photo</string>
    <string name="user_profile_dialog_cancel">Cancel</string>
    <string name="user_profile_dialog_title">Change profile photo</string>
    <string name="user_profile_chooser_message">Select photos</string>
    <string name="select_email_client">Select an application</string>
    <string name="dialog_title_enter">Enter</string>
    <string name="et_password">Password</string>
</resources>
