<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/login_coordinator_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="android:contentDescription">


    <RelativeLayout
        android:id="@+id/dialog_rel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="4dp"
            android:layout_height="34dp"
            android:layout_alignBottom="@+id/tv_dialog_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/tv_dialog_title"
            android:background="@color/color_accent"/>

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium_32"
            android:text="@string/dialog_title_enter"
            android:textAllCaps="true"
            android:textColor="@color/color_accent"
            android:textSize="34sp"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_til_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_big_72"
            android:layout_alignEnd="@+id/tv_dialog_title"
            android:layout_alignLeft="@+id/tv_dialog_title"
            android:layout_alignRight="@+id/tv_dialog_title"
            android:layout_alignStart="@+id/tv_dialog_title"
            android:layout_below="@+id/tv_dialog_title">

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_dialog_title"
                android:layout_marginLeft="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/grey">
            </EditText>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_til_password"

            android:layout_width="match_parent"
            android:layout_height="@dimen/size_big_72"
            android:layout_alignEnd="@+id/tv_dialog_title"
            android:layout_alignLeft="@+id/tv_dialog_title"
            android:layout_alignRight="@+id/tv_dialog_title"
            android:layout_alignStart="@+id/tv_dialog_title"
            android:layout_below="@+id/dialog_til_email">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dialog_til_email"
                android:layout_marginLeft="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/et_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn_ok"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_til_password"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:background="@color/color_accent"
            android:text="@string/dialog_title_enter"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/login_tv_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn_ok"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/spacing_normal_16"
            android:text="Забыли пароль?"
            android:textColorHint="@color/grey_light"/>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
